Extract typography mixins into the mixins directory. Make headings bold.

--- a/src/global_styling/k6/_typography.scss
+++ b/src/global_styling/k6/_typography.scss
@@ -5,3 +5,6 @@ $euiFontSize:       14px;
 $euiFontSizeL:      18px;
 $euiFontSizeXL:     22px;
 $euiFontSizeXXL:    28px;
+
+// Make titles bold.
+$euiFontWeightLight: 500;
